--- a/show.html
+++ b/show.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>河北中学</title>
-<link href="statics/css/hbschool/content.css" rel="stylesheet" type="text/css" />
+<link href="{CSS_PATH}/hbschool/content.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="{JS_PATH}/jquery.min.js"></script>
 
 </head>
@@ -13,11 +13,29 @@
     	<div id="top">
         	<div class="menu">
             	<ul>
-                	{pc:content action="category" catid="0" num="11" order="listorder ASC" siteid="$siteid"}
-                {loop $data $v}
-                  <li><a href="{$v['url']}" {if $v['catname']=='东校区'}class="specil"{/if}>{$v['catname']}</a></li>
-                {/loop}
-              {/pc}                   
+                	<li>网站首页</li>
+                    {pc:content action="category" catid="0" number=11 order="listorder ASC" siteid="$siteid"}
+                        {loop $data $v}
+                      {if $v['catid']==20}
+                         <li><a href="{$v['url']}" class="specil">{$v['catname']}</a></li>
+                      
+                      {else}
+                         <li><a href="{$v['url']}">{$v['catname']}</a></li>
+                      {/if}
+                      
+                        {/loop}
+                    {/pc}
+                    <!-- <li><a href="list.html">学校概况</a></li>
+                    <li><a href="#">规章制度</a></li>
+                    <li><a href="#">德育网</a></li>
+                    <li><a href="#">教研网</a></li>
+                    <li><a href="#">名师风采</a></li>
+                    <li><a href="#">高考专栏</a></li>
+                    <li><a href="#">图书馆</a></li>
+                    <li><a href="#">校友会</a></li>
+                    <li><a href="#">河中论坛</a></li>
+                    <li><a href="#">查询系统</a></li>
+                    <li><a href="#" class="specil">东校区</a></li>     -->                
                 </ul>
             </div>           
         </div>
@@ -45,17 +63,17 @@
           		<h1></h1>
 	           	<div id="colee" >
 					<div id="colee1">
-					<!--<p> <img src="statics/images/phpschool/pic.gif" width="200" height="150" />2010-2011年度先进单位</p>
-					<p> <img src="statics/images/phpschool/pic.gif" width="200" height="150" />2010-2011年度先进单位</p>
-					<p> <img src="statics/images/phpschool/pic.gif" width="200" height="150" />2010-2011年度先进单位</p>
-					<p> <img src="statics/images/phpschool/pic.gif" width="200" height="150" />2010-2011年度先进单位</p>
-					<p> <img src="statics/images/phpschool/pic.gif" width="200" height="150" />2010-2011年度先进单位</p>
-					<p> <img src="statics/images/phpschool/pic.gif" width="200" height="150" />2010-2011年度先进单位</p>-->
-					{pc:content action="position" posid="2" num="3" order="listorder DESC"}
-					{loop $data $v}
-					<p> <img src="$v['thumb']" width="200" height="150" />{$v['catname']}</p>
-					{/loop}
-					{/pc}
+					<!-- <p> <img src="{IMG_PATH}/hbschool/pic.gif" width="200" height="150" />2010-2011年度先进单位</p>
+					<p> <img src="{IMG_PATH}/hbschool/pic.gif" width="200" height="150" />2010-2011年度先进单位</p>
+					<p> <img src="{IMG_PATH}/hbschool/pic.gif" width="200" height="150" />2010-2011年度先进单位</p>
+					<p> <img src="{IMG_PATH}/hbschool/pic.gif" width="200" height="150" />2010-2011年度先进单位</p>
+					<p> <img src="{IMG_PATH}/hbschool/pic.gif" width="200" height="150" />2010-2011年度先进单位</p>
+					<p> <img src="{IMG_PATH}/hbschool/pic.gif" width="200" height="150" />2010-2011年度先进单位</p> -->
+                    {pc:content action="position" posid="2" num="3" order="listorder DESC"} 
+                        {loop $data $v}
+                           <p> <img src="{$v['thumb']}" width="200" height="150" />{$v['title']}</p> 
+                        {/loop}
+                    {/pc}
 				</div>
 				<div id="colee2"></div>
 			</div>
@@ -63,13 +81,14 @@
     </div>
     <div id="right">
         <h1>{$title}</h1>
-        <h2>作者：{$username}&nbsp;&nbsp;&nbsp;&nbsp;    图片来源：本站原创&nbsp;&nbsp;&nbsp;&nbsp;     点击数：<span id="hits"></span> &nbsp;&nbsp;&nbsp;&nbsp;     更新时间：{$inputtime}</h2>{$content}
+        <h2>作者：{$username}&nbsp;&nbsp;&nbsp;&nbsp;    图片来源：本站原创&nbsp;&nbsp;&nbsp;&nbsp;     点击数： <span id="hits"></span>&nbsp;&nbsp;&nbsp;&nbsp;     更新时间：{$updatetime}</h2>
+            {$content}
             <!-- <p>2013年4月14日，教育处和高一年级组共同组织了高一年级及高二实验部学生“励志踏青”活动。</p>
     		<p>此次“励志踏青”活动，行程约30多华里，历时5个小时。同学们从学校大门南行，左转至燕赵大街直行经历史文化街出南城门过子龙大桥，在南桥头右转进入汊河湿地公园景区，然后向西自由活动到神农庄园停车场集合，沿107国道北行至镇远路右转，到承德街左转北行，经恒山西路返回学校。</p>
-    		<p><img src="statics/images/phpschool/newspic.jpg" width="550px" height="380px"></p>
-    		<p>同学们在此次活动中展现出学校和班级的良好精神风貌。一路上，校旗班旗迎风招展，队伍整齐，每个人脸上都洋溢着青春的笑容。沿途和景区，随处都可以看到同学们捡拾垃圾的身影，互帮互助的身影。在景区，同学们尽情地拥抱大自然，呼吸着自由的空气，和好朋友合影留念。此次活动使同学们在徒步远行中砥砺了意志品质，于集体踏青时领略了湖光水色。</p>
-    		<p>此次活动经教育处和高一年级组缜密筹划、精心组织，全体班主任和随队老师的通力配合，在校医校车有利的后勤保障下，获得圆满成功！！</p> -->
-        <div class="next"><span class="font_next">上一篇：</span><a href="{$previous_page['url']}">{$previous_page['title']}</a><span class="font_next">下一篇：</span><a href="{$next_page['url']}">{$next_page['title']}</a></div> 
+    		<p><img src="{IMG_PATH}/hbschool/newspic.jpg" width="550px" height="380px"></p>
+    		<p>同学们在此次活动中展现出学校和班级的良好精神风貌。一路上，校旗班旗迎风招展，队伍整齐，每个人脸上都洋溢着青春的笑容。沿途和景区，随处都可以看到同学们捡拾垃圾的身影，互帮互助的身影。在景区，同学们尽情地拥抱大自然，呼吸着自由的空气，和好朋友合影留念。此次活动使同学们在徒步远行中砥砺了意志品质，于集体踏青时领略了湖光水色。</p> -->
+    		<!-- <p>此次活动经教育处和高一年级组缜密筹划、精心组织，全体班主任和随队老师的通力配合，在校医校车有利的后勤保障下，获得圆满成功！！</p> -->
+        <div class="next"><span class="font_next">上一篇：</span><a href="{$previous_page['url']}">{$previous_page['title']}<!-- 校园大扫除活动 --></a><span class="font_next">下一篇：</span><a href="{$next_page['url']}"><!-- 老红军来我校诉说;革命历程 -->{$next_page['title']}</a></div>
       </div>
  
     </div>
